[gd_scene load_steps=6 format=2]

[ext_resource path="res://OpenDyslexic/OpenDyslexic-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://TOMM_pt2.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 2 )

[node name="TOMM" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.240463, 0.597656, 0.388363, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texto" type="Label" parent="."]
margin_left = 332.0
margin_top = 8.0
margin_right = 1001.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "Qual imagem Ã© familiar?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Images" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="PlayerArea" type="ColorRect" parent="."]
margin_top = 570.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0784314, 0.494118, 0.894118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seg" type="Label" parent="PlayerArea"]
margin_left = 1196.0
margin_top = 20.0
margin_right = 1270.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="min" type="Label" parent="PlayerArea"]
margin_left = 1106.0
margin_top = 20.0
margin_right = 1180.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="div" type="Label" parent="PlayerArea"]
margin_left = 1182.0
margin_top = 20.0
margin_right = 1256.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
text = ":"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pts" type="Label" parent="PlayerArea"]
margin_left = 48.0
margin_top = -6.0
margin_right = 100.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "Pts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qtd_pts" type="Label" parent="PlayerArea"]
margin_left = 52.0
margin_top = 16.0
margin_right = 92.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="changeImage" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
